// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildChatItemTree should be compatible with legacy chat items 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "4",
                                "isAnswer": true,
                                "parentMessageId": "question-4",
                                "siblingIndex": 0,
                              },
                            ],
                            "id": "question-4",
                            "isAnswer": false,
                            "parentMessageId": "00000000-0000-0000-0000-000000000000",
                            "siblingIndex": 0,
                          },
                        ],
                        "id": "3",
                        "isAnswer": true,
                        "parentMessageId": "question-3",
                        "siblingIndex": 0,
                      },
                    ],
                    "id": "question-3",
                    "isAnswer": false,
                    "parentMessageId": "00000000-0000-0000-0000-000000000000",
                    "siblingIndex": 0,
                  },
                ],
                "id": "2",
                "isAnswer": true,
                "parentMessageId": "question-2",
                "siblingIndex": 0,
              },
            ],
            "id": "question-2",
            "isAnswer": false,
            "parentMessageId": "00000000-0000-0000-0000-000000000000",
            "siblingIndex": 0,
          },
        ],
        "id": "1",
        "isAnswer": true,
        "parentMessageId": "question-1",
        "siblingIndex": 0,
      },
    ],
    "id": "question-1",
    "isAnswer": false,
    "parentMessageId": "00000000-0000-0000-0000-000000000000",
    "siblingIndex": 0,
  },
]
`;

exports[`buildChatItemTree should build a tree from a list of chat items 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [],
                        "id": "3",
                        "isAnswer": true,
                        "parentMessageId": "question-3",
                        "siblingIndex": 0,
                      },
                    ],
                    "id": "question-3",
                    "isAnswer": false,
                    "parentMessageId": "2",
                    "siblingIndex": 0,
                  },
                ],
                "id": "2",
                "isAnswer": true,
                "parentMessageId": "question-2",
                "siblingIndex": 0,
              },
            ],
            "id": "question-2",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 0,
          },
          {
            "children": [
              {
                "children": [],
                "id": "4",
                "isAnswer": true,
                "parentMessageId": "question-4",
                "siblingIndex": 0,
              },
            ],
            "id": "question-4",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 1,
          },
        ],
        "id": "1",
        "isAnswer": true,
        "parentMessageId": "question-1",
        "siblingIndex": 0,
      },
    ],
    "id": "question-1",
    "isAnswer": false,
    "parentMessageId": null,
    "siblingIndex": 0,
  },
]
`;

exports[`buildChatItemTree should build a tree from a list of mixed chat items 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [],
                        "id": "3",
                        "isAnswer": true,
                        "parentMessageId": "question-3",
                        "siblingIndex": 0,
                      },
                    ],
                    "id": "question-3",
                    "isAnswer": false,
                    "parentMessageId": "2",
                    "siblingIndex": 0,
                  },
                ],
                "id": "2",
                "isAnswer": true,
                "parentMessageId": "question-2",
                "siblingIndex": 0,
              },
            ],
            "id": "question-2",
            "isAnswer": false,
            "parentMessageId": "00000000-0000-0000-0000-000000000000",
            "siblingIndex": 0,
          },
          {
            "children": [
              {
                "children": [],
                "id": "4",
                "isAnswer": true,
                "parentMessageId": "question-4",
                "siblingIndex": 0,
              },
            ],
            "id": "question-4",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 1,
          },
        ],
        "id": "1",
        "isAnswer": true,
        "parentMessageId": "question-1",
        "siblingIndex": 0,
      },
    ],
    "id": "question-1",
    "isAnswer": false,
    "parentMessageId": "00000000-0000-0000-0000-000000000000",
    "siblingIndex": 0,
  },
]
`;

exports[`buildChatItemTree should build a tree from a list of multi root nodes chat items 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [],
                        "id": "3",
                        "isAnswer": true,
                        "parentMessageId": "question-3",
                        "siblingIndex": 0,
                      },
                    ],
                    "id": "question-3",
                    "isAnswer": false,
                    "parentMessageId": "2",
                    "siblingIndex": 0,
                  },
                ],
                "id": "2",
                "isAnswer": true,
                "parentMessageId": "question-2",
                "siblingIndex": 0,
              },
            ],
            "id": "question-2",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 0,
          },
          {
            "children": [
              {
                "children": [],
                "id": "4",
                "isAnswer": true,
                "parentMessageId": "question-4",
                "siblingIndex": 0,
              },
            ],
            "id": "question-4",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 1,
          },
        ],
        "id": "1",
        "isAnswer": true,
        "parentMessageId": "question-1",
        "siblingIndex": 0,
      },
    ],
    "id": "question-1",
    "isAnswer": false,
    "parentMessageId": null,
    "siblingIndex": 0,
  },
  {
    "children": [
      {
        "children": [],
        "id": "5",
        "isAnswer": true,
        "parentMessageId": "question-5",
        "siblingIndex": 0,
      },
    ],
    "id": "question-5",
    "isAnswer": false,
    "parentMessageId": null,
    "siblingIndex": 1,
  },
]
`;

exports[`buildChatItemTree should build a tree from a list of multi root nodes chat items with legacy chat items 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [],
                        "id": "3",
                        "isAnswer": true,
                        "parentMessageId": "question-3",
                        "siblingIndex": 0,
                      },
                    ],
                    "id": "question-3",
                    "isAnswer": false,
                    "parentMessageId": "00000000-0000-0000-0000-000000000000",
                    "siblingIndex": 0,
                  },
                ],
                "id": "2",
                "isAnswer": true,
                "parentMessageId": "question-2",
                "siblingIndex": 0,
              },
            ],
            "id": "question-2",
            "isAnswer": false,
            "parentMessageId": "00000000-0000-0000-0000-000000000000",
            "siblingIndex": 0,
          },
          {
            "children": [
              {
                "children": [],
                "id": "4",
                "isAnswer": true,
                "parentMessageId": "question-4",
                "siblingIndex": 0,
              },
            ],
            "id": "question-4",
            "isAnswer": false,
            "parentMessageId": "1",
            "siblingIndex": 1,
          },
        ],
        "id": "1",
        "isAnswer": true,
        "parentMessageId": "question-1",
        "siblingIndex": 0,
      },
    ],
    "id": "question-1",
    "isAnswer": false,
    "parentMessageId": "00000000-0000-0000-0000-000000000000",
    "siblingIndex": 0,
  },
  {
    "children": [
      {
        "children": [],
        "id": "5",
        "isAnswer": true,
        "parentMessageId": "question-5",
        "siblingIndex": 0,
      },
    ],
    "id": "question-5",
    "isAnswer": false,
    "parentMessageId": null,
    "siblingIndex": 1,
  },
]
`;
